Fixing map display on mobile

--- a/edgeledger/css/mobile.css
+++ b/edgeledger/css/mobile.css
@@ -26,7 +26,7 @@
 }
 
 /* Smartphones */
-@media screen only and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
   #navbar {
     flex-direction: column;
     align-items: center;
@@ -61,12 +61,6 @@
     flex-direction: column;
   }
 
-  #contact .map,
-  #contact .contact-form {
-    flex: 1;
-    flex-basis: 100%;
-  }
-
   #contact .map {
     display: block;
     height: 200px;
@@ -74,7 +68,7 @@
   }
 }
 
-@media screen only and (max-height: 568px) {
+@media only screen and (max-height: 568px) {
   .l-heading {
     font-size: 3rem;
   }
